--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -365,7 +365,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "035434d4-627b-4c0f-aaf8-3c1a063722c7",
+     "nuid": "f7caa744-b11f-40a7-ab8d-328500558bbe",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -373,8 +373,7 @@
    },
    "outputs": [],
    "source": [
-    "## To read an excel spreadsheet\n",
-    "olympics_data = pd.read_excel('./data/olympics-data.xlsx', sheet_name=\"results\")"
+    "results.head()"
    ]
   },
   {
@@ -498,7 +497,7 @@
    },
    "outputs": [],
    "source": [
-    "coffee.sample(5) # Pass in random_state to make deterministic"
+    "coffee.sample(5) # Pass in random_state to make deterministic can also add another paramenter whch is random_state = 1  "
    ]
   },
   {
@@ -604,7 +603,7 @@
    },
    "outputs": [],
    "source": [
-    "coffee.iloc[:, [0,2]]"
+    "coffee.iloc[:, [0, 2]]"
    ]
   },
   {
@@ -2915,11 +2914,14 @@
     "hardware": {
      "accelerator": null,
      "gpuPoolId": null,
-     "memory": null
+     "memory": "HIGH"
     }
    },
    "dashboards": [],
-   "environmentMetadata": null,
+   "environmentMetadata": {
+    "base_environment": "",
+    "environment_version": "4"
+   },
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
