--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -563,7 +563,7 @@
    },
    "outputs": [],
    "source": [
-    "coffee.loc[5:9, [\"Day\", \"Units Sold\"]]"
+    "display(coffee.loc[5:9, [\"Day\", \"Units Sold\"]])"
    ]
   },
   {
@@ -603,7 +603,7 @@
    },
    "outputs": [],
    "source": [
-    "coffee.iloc[:, [0, 2]]"
+    "coffee.iloc[:, [1,2]] # only uses index values , not the header name "
    ]
   },
   {
