--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -656,6 +656,27 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "187df410-2879-4603-ad86-eff766f252f5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "coffee.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "9392c279-1d8d-441e-9b85-3c43ba1dd449",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -765,7 +786,7 @@
    },
    "outputs": [],
    "source": [
-    "coffee.at[0,\"Units Sold\"]"
+    "coffee.at[1,\"Units Sold\"]"
    ]
   },
   {
@@ -786,7 +807,7 @@
    },
    "outputs": [],
    "source": [
-    "coffee.iat[3,1]"
+    "coffee.iat[3,3]"
    ]
   },
   {
@@ -826,7 +847,7 @@
    },
    "outputs": [],
    "source": [
-    "coffee.Day"
+    "coffee.Day # only works in the case of single words as column names else use the [] to access the column data"
    ]
   },
   {
@@ -908,7 +929,7 @@
    },
    "outputs": [],
    "source": [
-    "coffee.sort_values([\"Units Sold\", \"Coffee Type\"], ascending=[0,1])"
+    "coffee.sort_values([\"Units Sold\", \"Coffee Type\"], ascending=[0,1]) # ascending taking more arguments to sort the data , 0 means (descending) and 1 means (ascending)"
    ]
   },
   {
