--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -807,7 +807,7 @@
    },
    "outputs": [],
    "source": [
-    "coffee.iat[3,3]"
+    "coffee.iat[3,2]"
    ]
   },
   {
@@ -972,7 +972,8 @@
     "for index, row in coffee.iterrows():\n",
     "    print(index)\n",
     "    print(row)\n",
-    "    print(\"Coffee Type of Row:\", row[\"Coffee Type\"])"
+    "    print(\"Coffee Type of Row:\", row[\"Coffee Type\"])\n",
+    "    print(\"\\n\")"
    ]
   },
   {
